# MultAgent-Strategic-Intelligence-System

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/documents/: acme_q3_2025_report.md  acme_strategic_review.md  cloud_market_analysis_2025.md
masis/: citation_engine.py  cli.py  config.py  evaluation.py  graph.py  hitl.py  llm_utils.py  rag.py  schemas.py  state.py
masis/agents/: researcher.py  skeptic.py  supervisor.py  synthesizer.py
tests/: test_unit.py
